# byteranges-rs

./: .editorconfig  .gitattributes  Cargo.toml  Makefile  README.md
data/: lorem.txt
data/response/: bytes=-100.http1  bytes=3000-.http1  bytes=50-100.http1
src/: lib.rs  request.rs  response.rs
src/impls/: http_impl.rs  mod.rs  reqwest_impl.rs  test_impl.rs
