[package]
name = "byteranges"
version = "0.1.0"
authors = ["Chris L. Barnes <chrislloydbarnes@gmail.com>"]
description = "Utilities for HTTP Range requests and responses"
repository = "https://github.com/clbarnes/byteranges-rs"
license = "MIT"
keywords = ["range", "content-range", "partial-content", "http", "request"]
categories = ["compression", "web-programming::http-client"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
http = { version = "0.2.9", optional = true }
http-content-range = "0.1.2"
httparse = "1.8.0"
reqwest = { version = "0.11.18", features=["blocking"], optional = true }
rope_rd = "0.1.1"
thiserror = "1.0.43"

[dev-dependencies]
cargo-release = "0.24.11"

[package.metadata.release]
publish = false
